hard-gists/1410094/run.log
=== Docker Run Log for 1410094 ===
Started at: Mi 29. Okt 12:13:16 CET 2025

[2025-10-29 12:13:17] START: Running container for 1410094
[2025-10-29 12:13:17] SUCCESS: Container 5529c2e272d0025d4065bd9734a7a40b220d50a295d78552439506e25bfdc194 started for 1410094
=== Container logs for 1410094 ===
  File "/snippet.py", line 13
    afinn = dict(map(lambda (w, s): (unicode(w, 'utf-8'), int(s)), [ 
                            ^^^^^^
SyntaxError: Lambda expression parameters cannot be parenthesized
=== End of logs for 1410094 ===
[2025-10-29 12:13:19] INFO: Container 5529c2e272d0025d4065bd9734a7a40b220d50a295d78552439506e25bfdc194 has stopped
